fix: 🐛 hide special character button on mobile devices

--- a/skinStyles/extensions/VisualEditor/ext.visualEditor.less
+++ b/skinStyles/extensions/VisualEditor/ext.visualEditor.less
@@ -353,6 +353,11 @@
 			}
 		}
 	}
+
+	// HACK: hide special character button on mobile devices
+	.oo-ui-tool-name-specialCharacter {
+		display: none !important;
+	}
 }
 
 // HACK: Temp fix for mobile toolbar, will revisit when we move to 1.39+
